--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding Quiz</title>
-    <link rel="stylesheet" href="./Assets/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./Assets/style.css" />
+  </head>
+  <body>
+    <!--Creating a Highscore button-->
+    <div class="container">
+        <header class="row">
+                <div id="finalScore"></div>
+                <input type="text" size = "40" placeholder="Enter you initials for high score" name="intials" id="initials"/>
+                <button id="submitScore">Submit Score</button>
+            </div>
+                
     <script src="./Assets/script.js"></script>
-</body>
+  </body>
 </html>
