--- a/index.html
+++ b/index.html
@@ -15,7 +15,28 @@
                 <input type="text" size = "40" placeholder="Enter you initials for high score" name="intials" id="initials"/>
                 <button id="submitScore">Submit Score</button>
             </div>
-                
+        </div>
+        <!--Title plus the time -->
+    </header>
+    <div id="time">Time: 100</div>
+    <section id="title-section" class="show">
+        <div class="row">
+            <div>
+                <h1>Coding Quiz Challenge</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div>
+                <p>Try and answer the following code-related questions within the time limit. Keep in mind that
+                    incorrect answers will penalize your your score time by 10 seconds!</p>
+            </div>
+        </div>
+        <div class="row">
+            <div>
+                <button id="startButton">Start Quiz</button>
+            </div>
+        </div>
+    </section>
     <script src="./Assets/script.js"></script>
   </body>
 </html>
