Adding my question div

--- a/index.html
+++ b/index.html
@@ -36,7 +36,24 @@
                 <button id="startButton">Start Quiz</button>
             </div>
         </div>
-    </section>
+</section>
+
+<!-- Coding questions -->
+<section id="quiz-section" class="hide">
+<div class="row">
+    
+        <h3 id="question-title"></h3>
+        <div id = "question">This is the question</div>
+
+</div>
+<div class="row">
+    <div id="choices"></div>
+    <div id="feedback" class="feedback hide">Correct</div>
+    <div id= "wrong">Wrong</div>
+    
+</div>
+</section>
+   
     <script src="./Assets/script.js"></script>
   </body>
 </html>
